telemetry/derive/tests/ui_fail/doubled_plus.stderr
error: expected literal
 --> tests/ui_fail/doubled_plus.rs:4:27
  |
4 | #[metrics(+"test_query", ++"another_test_query_without_timing")]
  |                           ^
